# figma-mcp-rust

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  glama.json  server.json
.github/workflows/: ci.yml  release.yml
npm/: package.json
plugin/: manifest.json  package.json
plugin/src/: serializers.test.ts  serializers.ts  write-effects.test.ts  write-styles.ts
plugin/src/ui/: App.svelte  index.html
prompts/: annotation_conversion_strategy.md  bulk_rename_strategy.md  design_strategy.md  design_token_generation_strategy.md  generate_color_palette.md  generate_component_variants.md  generate_type_scale.md  reaction_to_connector_strategy.md  read_design_strategy.md  style_audit_strategy.md  swap_overrides_instances.md  text_replacement_strategy.md
src/: bridge.rs  election.rs  error.rs  follower.rs  handler.rs  leader.rs  lib.rs  main.rs  node.rs  pdf.rs  prompts.rs  schema.rs  types.rs
src/tools/: definitions.rs  mod.rs  special.rs
tests/: node_routing.rs  schema_parity.rs  tools_registry.rs
