[package]
name = "figma-mcp-rust"
version = "0.1.1"
edition = "2021"
rust-version = "1.78"
description = "Figma MCP server with full read/write access via plugin — no API token, no rate limits"
license = "MIT"
repository = "https://github.com/alvinindra/figma-mcp-rust"
readme = "README.md"

[[bin]]
name = "figma-mcp-rust"
path = "src/main.rs"

[lib]
name = "figma_mcp_rust"
path = "src/lib.rs"

[dependencies]
# MCP
rmcp = { version = "0.3", features = ["server", "macros", "schemars", "transport-io"] }
schemars = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
async-trait = "0.1"

# Web (Leader HTTP + WS)
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace"] }
hyper = "1"

# HTTP client (Follower)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Utils
base64 = "0.22"
regex = "1"
once_cell = "1"
dashmap = "6"
rand = "0.8"

# PDF merging
lopdf = "0.34"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
